# dwl

./: .gitignore  Cargo.toml  README.md
desktop/: dwl.desktop
dwl/: Cargo.toml  README.md
dwl-status/: Cargo.toml  README.md
dwl-status/src/: main.rs
dwl/src/: main.rs
src/: main.rs
