[package]
name = "dwl"
version = "2.2.0"
edition = "2021"
license-file = "LICENSE"
description = "A helper to download video and songs"
readme = "README.md"
repository = "https://github.com/otechdo/dwl.git"
authors = ["Willy Micieli"]
keywords = ["spotify", "youtube","videos", "downloader", "music"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.7.4"
