[package]
name = "dwl"
version = "3.0.0"
edition = "2021"
license-file = "LICENSE"
description = "A helper to download video and songs"
readme = "README.md"
repository = "https://github.com/otechdo/dwl.git"
authors = ["Willy Micieli"]
keywords = ["spotify", "youtube","videos", "downloader", "music"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.8"
inquire = "0.7.4"
