[package]
name = "dwl"
version = "3.0.1"
edition = "2021"
license-file = "LICENSE"
description = "A helper to download music from sptify"
readme = "README.md"
repository = "https://github.com/otechdo/dwl.git"
authors = ["Willy Micieli"]
keywords = ["spotify", "youtube", "downloader", "music"]
categories = ["command-line-utilities"]
[dependencies]
indicatif = "0.17.8"
inquire = "0.7.5"
